# heating

./: .gitignore  CLAUDE.md  CMakeLists.txt  OPENTHERM_RMT_ANALYSIS.md  README.md  build.sh  example_config.h  partitions.csv  sdkconfig.defaults
arduino_gateway/: CMakeLists.txt  sdkconfig.defaults
arduino_gateway/components/opentherm/: CMakeLists.txt  idf_component.yml
arduino_gateway/main/: CMakeLists.txt  idf_component.yml  main.cpp
components/boiler_manager/: CMakeLists.txt  boiler_manager.c  boiler_manager.cpp  boiler_manager.h
components/boiler_manager/include/: boiler_manager.hpp
components/mqtt_bridge/: CMakeLists.txt  mqtt_bridge.c  mqtt_bridge.cpp  mqtt_bridge.h
components/mqtt_bridge/include/: mqtt_bridge.hpp
components/opentherm/: CMakeLists.txt  Kconfig  opentherm.c  opentherm.h  opentherm_lib_impl.cpp  opentherm_rmt.c  opentherm_rmt.h  opentherm_rmt_impl.c  ot_boiler.c  ot_boiler.cpp  ot_boiler_old_rmt.c  ot_queues.cpp  ot_thermostat.c  ot_thermostat.cpp  ot_thermostat_old_rmt.c  ot_utils.c
components/opentherm/include/: opentherm_api.h  opentherm_types.h  ot_boiler.h  ot_boiler.hpp  ot_queues.h  ot_queues.hpp  ot_thermostat.h  ot_thermostat.hpp
components/opentherm_library/: CMakeLists.txt  idf_component.yml  opentherm.cpp  opentherm_library.c  opentherm_port.cpp
components/opentherm_library/include/: opentherm.hpp  opentherm_library.h
components/opentherm_rmt/: CMakeLists.txt  opentherm.c  opentherm_rmt.c
components/ot/: CMakeLists.txt  OpenTherm.cpp  open_therm.cpp  rmt_encoder.cpp  rmt_encoder.h  rmt_parser.cpp  rmt_parser.h
components/ot/include/: OpenTherm.h  (+1 more)
components/ota_update/: CMakeLists.txt  ota_update.c  ota_update.h
components/web_ui/: CMakeLists.txt  README.md  minify.hpp  web_ui.c  web_ui.h  web_ui_pages.cpp  web_ui_pages.h
components/websocket_server/: CMakeLists.txt  websocket_server.c  websocket_server.cpp  websocket_server.h
main/: CMakeLists.txt  Kconfig.projbuild  opentherm_gateway.c  opentherm_gateway.cpp  opentherm_gateway.h
scripts/: decode_opentherm.py  humanize_ot_log.py  humanize_serial_log.py
testing/: generate_pulses.py  test.cpp
web-ui/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
web-ui/scripts/: add-hash.js  gzip.js
web-ui/src/: main.js
(+19 files in other folders)
